field vertical align fix

--- a/src/scss/nevs/field.scss
+++ b/src/scss/nevs/field.scss
@@ -2,6 +2,7 @@
   box-sizing: border-box;
   display: inline-block;
   padding: 5px;
+  vertical-align: top;
 
   &-content {
     box-sizing: border-box;
